# cmake-cookbook

./: .appveyor.yml  .clang-format  .drone.yml  .editorconfig  .envrc  .gitattributes  .gitignore  .mailmap  .style.yapf  .travis.yml  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  ISSUES.md  LICENSE  Pipfile  README.md  STYLE_GUIDE.md  default.nix  pyproject.toml  requirements.txt
.circleci/: config.yml
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: test.yml
.pkgs/: ninja-kitware.nix
.scripts/: ci_configure_build_test.py  install_deps.sh  menu.yml  reformat.py  report_versions.sh
Chapter01/: README.md
Chapter01/recipe-0001/: README.md
Chapter01/recipe-0003/: README.md
Chapter01/recipe-0004/: README.md
Chapter01/recipe-0005/: README.md
Chapter01/recipe-0006/: README.md
Chapter01/recipe-0007/: README.md
Chapter01/recipe-0009/: README.md
Chapter01/recipe-01/: README.md
Chapter01/recipe-02/: README.md
Chapter01/recipe-03/: README.md
Chapter01/recipe-03/cxx-example/: CMakeLists.txt
Chapter01/recipe-04/: README.md
Chapter01/recipe-04/cxx-example/: CMakeLists.txt  Message.cpp
Chapter01/recipe-06/: README.md
Chapter01/recipe-06/cxx-example/: CMakeLists.txt  hello-world.cpp  menu.yml
Chapter01/recipe-07/: README.md
Chapter01/recipe-07/c-example/: CMakeLists.txt
Chapter01/recipe-07/fortran-example/: CMakeLists.txt  menu.yml
Chapter01/recipe-08/c-example/: CMakeLists.txt  menu.yml
Chapter01/recipe-08/cxx-example/: CMakeLists.txt  geometry_polygon.cpp  geometry_rhombus.cpp  geometry_rhombus.hpp  menu.yml
Chapter01/recipe-09/fortran-example/: CMakeLists.txt  compute-areas.f90  menu.yml
Chapter01/recipe-10/cxx-example/: Animal.cpp  Animal.hpp  CMakeLists.txt  Cat.hpp  Dog.hpp  geometry_circle.hpp  menu.yml
Chapter01/recipe-10/fortran-example/: CMakeLists.txt  geometry_circle.f90  geometry_rhombus.f90  geometry_square.f90  menu.yml
Chapter02/: README.md
Chapter02/recipe-0011/: README.md
Chapter02/recipe-0012/: README.md
Chapter02/recipe-0012/cxx-example/: CMakeLists.txt
Chapter02/recipe-0013/: README.md
Chapter02/recipe-0013/cxx-example/: CMakeLists.txt  hello-world.cpp
Chapter02/recipe-0013/fortran-example/: CMakeLists.txt  hello-world.F90
Chapter02/recipe-01/cxx-example/: CMakeLists.txt
Chapter02/recipe-02/: README.md
Chapter02/recipe-02/cxx-example/: CMakeLists.txt  hello-world.cpp
Chapter02/recipe-03/cxx-example/: CMakeLists.txt
Chapter02/recipe-03/fortran-example/: CMakeLists.txt  menu.yml
Chapter02/recipe-04/cxx-example/: CMakeLists.txt  arch-dependent.cpp
Chapter02/recipe-05/: README.md
Chapter02/recipe-06/cxx-example/: CMakeLists.txt  linear-algebra.cpp
Chapter03/: README.md
Chapter03/recipe-0011/: README.md
Chapter03/recipe-0012/: README.md
Chapter03/recipe-0012/c-example/: CMakeLists.txt  hello-embedded-python3.c
Chapter03/recipe-0013/: README.md
Chapter03/recipe-0014/: README.md
Chapter03/recipe-0014/cxx-example/: CMakeLists.txt  CxxBLAS.hpp  README.md  linear-algebra.cpp
Chapter03/recipe-0015/: README.md
Chapter03/recipe-0016/: README.md
Chapter03/recipe-0016/c-example/: CMakeLists.txt  hello-mpi.c  menu.yml
Chapter03/recipe-0016/cxx-example/: CMakeLists.txt  hello-mpi.cpp
Chapter03/recipe-0017/: README.md
Chapter03/recipe-0018/: README.md
Chapter03/recipe-0020/: README.md
Chapter03/recipe-0021/: README.md
Chapter03/recipe-05/: README.md
Chapter03/recipe-07/: README.md
Chapter03/recipe-09/: README.md
Chapter04/recipe-01/: README.md
Chapter04/recipe-08/: README.md
Chapter04/recipe-10/: README.md
Chapter05/: README.md
Chapter05/recipe-04/: README.md
Chapter05/recipe-07/: README.md
Chapter05/recipe-08/: README.md
Chapter05/recipe-09/: README.md
Chapter06/: README.md
Chapter06/recipe-01/: README.md
Chapter06/recipe-02/: README.md
Chapter06/recipe-04/: README.md
Chapter06/recipe-07/: README.md
Chapter07/: README.md
Chapter07/recipe-01/: README.md
Chapter07/recipe-02/: README.md
Chapter07/recipe-03/: README.md
Chapter07/recipe-04/: README.md
Chapter07/recipe-05/: README.md
Chapter07/recipe-06/: README.md
Chapter08/: README.md
Chapter08/recipe-01/: README.md
Chapter08/recipe-02/: README.md
Chapter09/: README.md
Chapter10/: .watsonrc  README.md
Chapter11/: README.md
Chapter12/: README.md
Chapter14/: README.md
chapter-01/: README.md  title.txt
chapter-02/: README.md  title.txt
chapter-03/: README.md  title.txt
chapter-04/: README.md  title.txt
chapter-05/: README.md  title.txt
chapter-06/: README.md  title.txt
chapter-07/: README.md
chapter-08/: README.md  title.txt
chapter-09/: README.md  title.txt
chapter-10/: README.md  title.txt
chapter-11/: README.md  title.txt
chapter-12/: README.md  title.txt
chapter-13/: README.md  title.txt  toolchain-travis-linux.cmake
chapter-14/: README.md  title.txt
chapter-15/: README.md
contributing/: README.md  generate-readmes.py
dependencies/: install_dependencies.sh  report_versions.sh
figures/: README.md
format/: Pipfile  README.md  cmake-format.yaml  format.sh
recipe-0000/: README.md
recipe-0001/: README.md
recipe-0002/: README.md
recipe-0003/cxx-objlib-example/: CMakeLists.txt
recipe-0005/: README.md
recipe-0005/cxx-example/: CMakeLists.txt  geometry_circle.cpp  geometry_circle.hpp  geometry_polygon.cpp
recipe-0007/: README.md
recipe-0008/: README.md
recipe-0008/cxx-example/: CMakeLists.txt  geometry_rhombus.cpp
recipe-0009/: README.md
recipe-0009/cxx-example/: CMakeLists.txt  geometry_rhombus.hpp  inplace_expression_validity.cpp
recipe-0010/cxx-example/: Animal.hpp  CMakeLists.txt  Cat.cpp  Cat.hpp  animal-farm.cpp
testing/: README.md  canonicalize_filename.sh  collect_tests.py  env.py  install-msmpi.ps1  install.ps1  menu.yml  parse.py
to-triage/: README.md
to-triage/strong-types/: Addable.hpp  CMakeLists.txt  CRTP.hpp  Incrementable.hpp  Multiplicable.hpp  NamedType.hpp  Printable.hpp  README.md
tools/: generate-readmes.py
(+1362 files in other folders)
