[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "cmake-cookbook"
version = "0.0.0"
description = "CMake Cookbook"
authors = ["Radovan Bast <radovan.bast@gmail.com>", "Roberto Di Remigio <roberto.diremigio@gmail.com>"]

[tool.poetry.dependencies]
Sphinx = "3"
breathe = "4.19"
cffi = "1.12"
colorama = "0.43"
cython = "0.29"
docopt = "0.6"
numpy = "^1.17"
python = "^3.6"
pyyaml = "5.3"
